sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:8: error: not found: value ecart
    j=ecart
      ^AlgShellSort:9: error: not found: value ecart
    ecart=taille/2
    ^AlgShellSort:12: error: not found: value ecart
      j=j-ecart
          ^